fixed auth issues, header alignments

--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -34,6 +34,7 @@ body{
 
 a{
     text-decoration: none;
+    color: $listFont;
 }
 ul{
     list-style: none;
