--- a/src/style/modules/_computed.scss
+++ b/src/style/modules/_computed.scss
@@ -2,7 +2,7 @@
     display: flex;
     height: 16rem;
     justify-content: flex-end;
-    padding: 2rem;
+    padding: 1rem;
     
     .balance{
         font-size:4rem;
