--- a/src/style/modules/_header.scss
+++ b/src/style/modules/_header.scss
@@ -10,27 +10,48 @@ header{
     i{
         color: $white;
         font-size: 1.5rem;
+        transition: all 0.3s ease-in;
+     
       
         
     } 
-    nav{
-        display: flex;
-        flex:1;
+    .nav-container{
+        display: flex;       
         justify-content: flex-end;
         align-items: center;
-        padding: 1em 2em;
+        padding: 1em 1em;
         height:80px;
-        .auth{
-            margin-left: 1rem;
+     
+        .log-out{
+          
             cursor: pointer;
+            &:hover{
+                i{
+                    color: $primaryDark;
+                    font-size: 1.3rem;
+                  
+                    
+                } 
+            }
+         
         }
         .notifications{
             cursor: pointer;
-        }
+            &:hover{
+                i{
+                    color: $primaryDark;
+                    font-size: 1.3rem;
+                  
+                    
+                } 
+            }
+         
+         
 
 
 
         
     }
+}
 
 }
