--- a/src/style/vars/_vars.scss
+++ b/src/style/vars/_vars.scss
@@ -13,4 +13,6 @@ $listFont:#2A2A44;
 $pageLink:14px;
 $default-page-LM:3rem;
 $input-background:#f1f1f1;
+$input-focus: rgb(83, 82, 82);
+$border-focus:rgba(0, 12, 55, 0.1);
 $shadow:0px 2px 8px 4px rgba(0,0,0,0.10);
